@@ -16,7 +16,8 @@ Revision history for Tesla-API
     - Renamed CACHE_FILE to AUTH_CACHE_FILE
     - Added _authentication_cache_file() which allows changing the default
       AUTH_CACHE_FILE path to something custom (primarily for testing)
-    -
+    - Moved call to _authentication_code() from _access_token() to
+      _access_token_generate()
 
 0.10    2022-04-11
     - Remove erroneous call example from Tesla::Vehicle from the SYNOPSIS
